# next_semver

./: Cargo.toml  Dockerfile  README.md  deploy.md  web.k8s.yaml
.github/workflows/: release.yml
helm/: Chart.yaml  values.yaml
helm/templates/: cleanup.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
src/: lib.rs  main.rs
