[package]
name = "next_semver"
version = "1.0.0"
description = "Send your current version and the type of bump you want, and you get back the new version. As webpage or as library."
edition = "2021"
publish = true
license = "Apache-2.0"

[lib]
name = "next_semver"
path = "src/lib.rs"

[[bin]]
name = "next_semver"
path = "src/main.rs"
required-features = ["web"]

[features]
web = ["rocket"]

[dependencies]
rocket = { version = "0.5.0-rc.1", optional = true }
semver = "1.0.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3.2", optional = true }

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

